--- a/Dissertation/partPropulsion.tex
+++ b/Dissertation/partPropulsion.tex
@@ -15,90 +15,11 @@
 \section{Математичечская модель маршевого движителя ПА}
 
 Это один или несколько кормовых движителей, обеспечивающих продольное движение аппарата, а также возможность маневрирования по глубине и курсу.
-
-В работе \cite{10.1109/48.107145} была предложена модель движителя заданная в форме пространства состояний по входному параметру $n$ где $n$ -- скорость вращения вала:
-\begin{equation}
-    \label{eq:thruster_dynamic_1}
-    \begin{array}{c}
-        J_p\dot{n} + K_{n|n|}n|n| = Q \\
-        T = T(n, u_p)
-    \end{array}
-\end{equation}
-
-\noindent где
-\begin{itemize}
-    \item $Q$ -- момент сопротивления вращению на валу привода;
-    \item $J_p$ -- момент инерции с учётом присоедённого момента воды;
-    \item $K_{n|n|}$ -- нелинейный коэффициент демпфирования мотора;
-    \item $u_p$ -- скорость потока в канале движителя;
-\end{itemize}
-
-% \begin{notequestion}
-%     $K_{n|n|}$ -- Nonlinear motor damping coefficient (kgm$^2$)
-
-%     $u_p$ Axial flow velocity in propeller disc (m/s).
-
-%     По статье \cite{10.1109/48.838987}
-% \end{notequestion}
-
-Коэффициент $K_{n|n|}$ определяется следующим образом:
-\begin{gather*}
-    K_{n|n|} = \frac{1}{2}\eta^3 \cdot p^3 \cdot \rho \cdot A \\
-    J_p = \eta^2 \cdot p^2 \cdot \rho \cdot V
-\end{gather*}
-\noindent где
-\begin{itemize}
-    \item $\eta$ -- это безразмерный коэффициент эффективности винта;
-    \item $p$ -- шаг винта;
-    \item $A$ -- площадь сечения винта;
-    \item $V$ -- объем насадки в которой расположен винт.
-\end{itemize}
-
-Позже модель, представленная уравнением \ref{eq:thruster_dynamic_1}, была усовершенствована в работе \cite{10.1109/48.468242} на основе исследований \cite{cody1992experimental, mclean1991dynamic}.
-Новая модель описывает вектором из двух состояний и записывается следующим образом:
-\begin{gather*}
-    J_p\dot{n} + K_{n|n|}n|n| = Q_m- Q \\
-    m_f \dot{u_p} + d_f(u_p-u) |u_p - u| = T \\
-    T = T(n,u_p) \\
-    Q = Q(n,u_p)
-\end{gather*}
-\noindent где
-\begin{itemize}
-    \item $Q_m$ -- момент на валу сформированный приводом;
-    \item $m_f$ -- масса воды захватываемая винтом;
-    \item $d_f$ -- квадратичный демпфирующий коэффициент;
-    \item $u$ -- продольная скорость движения ПА.
-\end{itemize}
-
-Экспериментальная проверка обоих подходов была проведена в работе \cite{whitcomb1999development}.
-
-Кроме того, в работе \cite{blanke2000dynamic} рассматривается трех этапная модель винта, которая уже учитывает упрощённую модель ПА для более точного расчета скорости потока набегающего на грибной винт:
-\begin{gather*}
-    J_p\dot{n} + K_{n|n|}n|n| = \tau - Q \\
-    m_f \dot{u_p} + d_{f0}u_p + d_f|u_p|(u_p - u_a) = T \\
-    (m - X_{\dot{u}})\dot{u} - X_u u - X_{u|u|}u|u| = (1-t)T\\
-    T = T(n,n_p) \\
-    Q = Q(n,n_p)
-\end{gather*}
-
-Последние исследования в области описания динамики движителя представлены в работе \cite{10.1109/robot.2005.1570115}.
-
-Кроме того, разумно рассмотреть декомпозицию задачи и независимо рассмотреть стационарную модель гребного винта и модель динамики электрического привода.
+Его математическую модель разумно разбить на две и независимо рассмотреть стационарную модель гребного винта и модель динамики электрического привода.
 
 \subsection{Математическая модель гребного винта}
 
 Для гребного винта с фиксированным шагом, момент на валу $Q$ и сила (упор) вырабатываемая винтом $T$ зависит от продольной скорости движения аппарата $u$, скорости потока воды $u_a$, а так же скорости вращения винта $n$.
-В соответствии с работами \cite{newman2018marine, breslin1996hydrodynamics, carlton2018marine} на работу движителя также влияют следующие параметры нестационарности потока, формируемого гребным винтом:
-\begin{itemize}
-    \item всасывание воздуха;
-    \item кавитация;
-    \item эффект Вагнера при вращении винта у раздела сред;
-    \item эффект Куснера (срыв потока).
-\end{itemize}
-
-Приведенные факторы рассматриваются в основном в приложении к надводным судам.
-Для движителей подводных аппаратов, маневрирующих в толще воды на значительной глубине погружения.
-Эффект Куснера связанный со срывом потока связан с высокоамплитудными переключениями сигнала управления движителем и им также можно пренебречь.
 
 Квазистационарное моделирование тяги и крутящего момента движителя обычно происходит в терминах кривых подъемной силы и момент сопротивления, которые возможно преобразовать в тягу и момент.
 Подъемная сила и момент сопротивления обычно формируются через безразмерные коэффициенты упора $K_T$ и момента $K_Q$, которые рассчитываются на базе модельных испытаний прототипа гребного винта \cite{daidola1992propeller}.
@@ -109,9 +30,10 @@
     K_Q (J_0) = \frac{Q}{\rho D^5 n |n|}    
 \end{equation}
 \noindent где $D$ -- диаметр винта, $\rho$ -- плотность воды, а $J_0$ представляет собой относительную поступь и определяется следующим уравнением:
-\begin{equation*}
+\begin{equation}
+    \label{eq:ratio_1}
     J_0 = \frac{u_a}{nD}
-\end{equation*}
+\end{equation}
 \noindent где $u_a$ -- скорость окружающей воды (совпадает со скоростью движения аппарата в случае установившегося движения).
 
 Расчёт коэффициентов $K_T$, $K_Q$ обычно проводят на натурных экспериментах в специальных бассейнах.
@@ -162,83 +84,70 @@
     \item $J_m$ -- момент инерции ротора.
 \end{itemize}
 
-Поскольку электрическая постоянная времени $T_a=L_a/R_a$ \cite{10.1109/48.838987} мала по сравнению с механической постоянной времени мотора, допустимо следующее предположение:
-\begin{equation*}
-    \frac{L_a}{R_a}\frac{d}{dt}i_m \approx 0
-\end{equation*}
-\noindent следовательно динамику движителя можно упростить до следующего состояния:
-\begin{equation}
-    \label{eq:motor_dynamics}
-    \begin{array}{rl}
-        0 &= -R_a i_m-K_m w_m + V_m \\
-        J_m\dot{n} &= K_m i_m - Q
-    \end{array}
-\end{equation}
+% \subsection{Методы управления приводом движителя ПА}
+% Анализ опыта разработки систем управления движением НПА и систем динамического позиционирования судов подтверждает наличие трех вариантов управления движителями: управление по моменту электропривода, управление по оборотам ГВ и управление по упору \cite{костенко2020исследование, костенко2019разработка, sorensen20003}.
+% Структурные схемы вариантов управления приведены на рисунке \ref{fig:control_methods_schemes}
 
-\subsection{Методы управления приводом движителя ПА}
-Анализ опыта разработки систем управления движением НПА и систем динамического позиционирования судов подтверждает наличие трех вариантов управления движителями: управление по моменту электропривода, управление по оборотам ГВ и управление по упору \cite{костенко2020исследование, костенко2019разработка, sorensen20003}.
-Структурные схемы вариантов управления приведены на рисунке \ref{fig:control_methods_schemes}
+% \begin{figure}[ht]
+%     \begin{minipage}[b][][b]{\linewidth}\centering
+%         \includegraphics[width=0.6\linewidth]{modelling/Схема - управление по упору.png} \\ а) управление по моменту электропривода
+%     \end{minipage}
+%     \hfill
+%     \begin{minipage}[b][][b]{\linewidth}\centering
+%         \includegraphics[width=0.8\linewidth]{modelling/Схема - управление по оборотам.png} \\ б) управление по оборотам ГВ
+%     \end{minipage}
+%     \begin{minipage}[b][][b]{\linewidth}\centering
+%         \includegraphics[width=0.8\linewidth]{modelling/Схема - управление по упору.png} \\ в) управление по упору
+%     \end{minipage}
+%     \caption{Структурные схемы вариантов управления движителем.}
+%     \label{fig:control_methods_schemes}
+% \end{figure}
 
-\begin{figure}[ht]
-    \begin{minipage}[b][][b]{\linewidth}\centering
-        \includegraphics[width=0.6\linewidth]{modelling/Схема - управление по упору.png} \\ а) управление по моменту электропривода
-    \end{minipage}
-    \hfill
-    \begin{minipage}[b][][b]{\linewidth}\centering
-        \includegraphics[width=0.8\linewidth]{modelling/Схема - управление по оборотам.png} \\ б) управление по оборотам ГВ
-    \end{minipage}
-    \begin{minipage}[b][][b]{\linewidth}\centering
-        \includegraphics[width=0.8\linewidth]{modelling/Схема - управление по упору.png} \\ в) управление по упору
-    \end{minipage}
-    \caption{Структурные схемы вариантов управления движителем.}
-    \label{fig:control_methods_schemes}
-\end{figure}
+% На рисунке 6 приняты следующие обозначения:  
+% \begin{itemize}
+%     \item $T_{\text{з}}$ -- заданное значение упора движителя;
+%     \item $N_y(T_{\text{мд}})$ -- калибровочная характеристика движителя, определенная как обратная функция статической швартовной характеристики $T_{\text{мд}}(N_y)$
+%     \item $n_{\text{в}}(T_{\text{мд}})$ -- калибровочная характеристика движителя, определенная как обратная функция экспериментальной швартовной характеристики $T_{\text{мд}}(n_{\text{в}})$.
+% \end{itemize}
 
-На рисунке 6 приняты следующие обозначения:  
-\begin{itemize}
-    \item $T_{\text{з}}$ -- заданное значение упора движителя;
-    \item $N_y(T_{\text{мд}})$ -- калибровочная характеристика движителя, определенная как обратная функция статической швартовной характеристики $T_{\text{мд}}(N_y)$
-    \item $n_{\text{в}}(T_{\text{мд}})$ -- калибровочная характеристика движителя, определенная как обратная функция экспериментальной швартовной характеристики $T_{\text{мд}}(n_{\text{в}})$.
-\end{itemize}
+% Каждому варианту управления движителем соответствует индивидуальный регулятор, формирующий код управления электроприводом $N_y$ на основании заданной тяги, соответствующих методу обратных связей и ограничений параметров.
+% Для управления электродвижущим моментом привода по разомкнутому контуру выбран самый простой регулятора следующего вида:
+% \begin{equation}
+%     \label{eq:thruster_control_torque}
+%     N_{y1} = 
+%     \left\{
+%     \begin{array}{l}
+%         N_y(T_{\text{мд}}), -127 < N_y < 127; \\
+%         127 \cdot N_y, |N_y| \geq 127.
+%     \end{array}
+%     \right.
+% \end{equation}
 
-Каждому варианту управления движителем соответствует индивидуальный регулятор, формирующий код управления электроприводом $N_y$ на основании заданной тяги, соответствующих методу обратных связей и ограничений параметров.
-Для управления электродвижущим моментом привода по разомкнутому контуру выбран самый простой регулятора следующего вида:
-\begin{equation}
-    \label{eq:thruster_control_torque}
-    N_{y1} = 
-    \left\{
-    \begin{array}{l}
-        N_y(T_{\text{мд}}), -127 < N_y < 127; \\
-        127 \cdot N_y, |N_y| \geq 127.
-    \end{array}
-    \right.
-\end{equation}
+% Метод управления с обратной связью по частоте вращения ГВ предполагает предварительное вычисление заданных оборотов ГВ $n_{\text{з}}$ в соответствии с калибровочной характеристикой $n_{\text{в}}(T_{\text{ш}})$ с последующей отработкой П - регулятором:
+% \begin{equation}
+%     \label{eq:thruster_control_rotation}
+%     N_{y2} = 
+%     \left\{
+%     \begin{array}{l}
+%         (n_{\text{з}}(T_{\text{з}})) \cdot K_{np}, -127 < N_y < 127; \\
+%         127 \cdot N_y, |N_y| \geq 127.
+%     \end{array}
+%     \right.
+% \end{equation}
+% \noindent где $K_{np}$ -- коэффициент П-регулятора.
 
-Метод управления с обратной связью по частоте вращения ГВ предполагает предварительное вычисление заданных оборотов ГВ $n_{\text{з}}$ в соответствии с калибровочной характеристикой $n_{\text{в}}(T_{\text{ш}})$ с последующей отработкой П - регулятором:
-\begin{equation}
-    \label{eq:thruster_control_rotation}
-    N_{y2} = 
-    \left\{
-    \begin{array}{l}
-        (n_{\text{з}}(T_{\text{з}})) \cdot K_{np}, -127 < N_y < 127; \\
-        127 \cdot N_y, |N_y| \geq 127.
-    \end{array}
-    \right.
-\end{equation}
-\noindent где $K_{np}$ -- коэффициент П-регулятора.
-
-Управление с обратной связью по измеренному упору движителя может быть реализовано ПИ-регулятором следующего вида:
-\begin{equation}
-    \label{eq:thruster_control_thrust}
-    N_{y3} = 
-    \left\{
-    \begin{array}{l}
-        (T_\text{з} - T_\text{мд}) \cdot K_{tp} +K_{ti} \int(T_\text{з} - T_\text{мд}) dt , -127 < N_y < 127; \\
-        127 \cdot N_y, |N_y| \geq 127.
-    \end{array}
-    \right.
-\end{equation}
-\noindent где $K_{tp}$ и $K_{ti}$, соответственно, пропорциональный и интегральный коэффициенты ПИ-регулятора.
+% Управление с обратной связью по измеренному упору движителя может быть реализовано ПИ-регулятором следующего вида:
+% \begin{equation}
+%     \label{eq:thruster_control_thrust}
+%     N_{y3} = 
+%     \left\{
+%     \begin{array}{l}
+%         (T_\text{з} - T_\text{мд}) \cdot K_{tp} +K_{ti} \int(T_\text{з} - T_\text{мд}) dt , -127 < N_y < 127; \\
+%         127 \cdot N_y, |N_y| \geq 127.
+%     \end{array}
+%     \right.
+% \end{equation}
+% \noindent где $K_{tp}$ и $K_{ti}$, соответственно, пропорциональный и интегральный коэффициенты ПИ-регулятора.
 
 \section{Математическая модель подруливающих движителей ПА}
 Описание работы подруливающего движителя описывается существенно сложнее по сравнению с маршевым движителем за счёт особенностей взаимодействия создаваемой подруливающим движителем пропульсивной струи с корпусом подводного аппарата \cite{tolstonogov2017auv}.
@@ -266,28 +175,28 @@
 
 При низких и средних скоростях продольного движения ПА, когда формируемая подруливающим движителем скорость пропульсивной струи существенно выше скорости АНПА наклон струи незначителен, гидродинамическая тень мала и соответственно мала и сила создаваемая разностью давлений на корпус ПА.
 При высоких скоростях движения ПА, когда скорость набегаемого на АПНА потока сопоставима или выше по скорости чем скорость создаваемой подруливающим движителем пропульсивной струи, её наклон существенно выше, как и создаваемая гидродинамическая тень и общая эффективность подруливающего движителя падает значительно.
-Важно так же учитывать что с увеличением гидродинамической тени точка приложения разности давлений начинает сдвигаться и результирующий момент действующий на аппарат формируемый силой $T_S$ меняется.
+% Важно так же учитывать что с увеличением гидродинамической тени точка приложения разности давлений начинает сдвигаться и результирующий момент действующий на аппарат формируемый силой $T_S$ меняется.
 
-При этом разница давлений вокруг входа в туннель подруливающего движителя и вокруг выходом из него не оказывают значительного влияния на эффективность подруливающего движителя \cite{brix1973lateral}.
+% При этом разница давлений вокруг входа в туннель подруливающего движителя и вокруг выходом из него не оказывают значительного влияния на эффективность подруливающего движителя \cite{brix1973lateral}.
 
-Количественные изменения эффективности подруливающего движителя были оценены в работе \cite{chislett1966influence} в котором экспериментально исследовалась эффективность движительно-рулевого комплекса на макете судна.
-В ходе эксперимента авторы получили коэффициенты эффективности упора $K_F$ создаваемого подруливающим движителем и момента сопротивления вращению гребного винта $K_N$.
-Они определяются следующим образом:
-\begin{equation*}
-	K_T = \frac{T_{u/u_j}}{T_0}; \: K_N = \frac{N_{u/u_j}}{N_0}
-\end{equation*}
-\noindent где $T_{u/u_j}$ и $N_{u/u_j}$ упор и момент сопротивления вращению при набегающем потоке, а $T_0$ $N_0$ -- при его отсутствии.
+% Количественные изменения эффективности подруливающего движителя были оценены в работе \cite{chislett1966influence} в котором экспериментально исследовалась эффективность движительно-рулевого комплекса на макете судна.
+% В ходе эксперимента авторы получили коэффициенты эффективности упора $K_F$ создаваемого подруливающим движителем и момента сопротивления вращению гребного винта $K_N$.
+% Они определяются следующим образом:
+% \begin{equation*}
+% 	K_T = \frac{T_{u/u_j}}{T_0}; \: K_N = \frac{N_{u/u_j}}{N_0}
+% \end{equation*}
+% \noindent где $T_{u/u_j}$ и $N_{u/u_j}$ упор и момент сопротивления вращению при набегающем потоке, а $T_0$ $N_0$ -- при его отсутствии.
 
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=0.8\linewidth]{modelling/Эксперимент - Kt Kn подруливающий движитель.png}
-    \caption{Коэффициенты $K_T$, $K_N$ подруливающего движителя, полученные в ходе натурных экспериментов.}
-    \label{fig:tunnel_effectivness}
-\end{figure}
+% \begin{figure}[ht]
+%     \centering
+%     \includegraphics[width=0.8\linewidth]{modelling/Эксперимент - Kt Kn подруливающий движитель.png}
+%     \caption{Коэффициенты $K_T$, $K_N$ подруливающего движителя, полученные в ходе натурных экспериментов.}
+%     \label{fig:tunnel_effectivness}
+% \end{figure}
 
-По рисунку \ref{fig:tunnel_effectivness} представленному в статье \cite{chislett1966influence} видно, что результирующий упор создаваемый подруливающим движителем падает при большом отношении скорости набегающего потока к скорости пропульсивной струи, при этом как момент сопротивления вращению ГВ падает существенно слабее.
+% По рисунку \ref{fig:tunnel_effectivness} представленному в статье \cite{chislett1966influence} видно, что результирующий упор создаваемый подруливающим движителем падает при большом отношении скорости набегающего потока к скорости пропульсивной струи, при этом как момент сопротивления вращению ГВ падает существенно слабее.
 
-Экспериментальные исследования эффективности подруливающего движителя для АНПА было так же проведено в работе \cite{beveridge1972design}, где были получены данные аналогичные представленным на рисунке \ref{fig:tunnel_effectivness}.
+% Экспериментальные исследования эффективности подруливающего движителя для АНПА было так же проведено в работе \cite{beveridge1972design}, где были получены данные аналогичные представленным на рисунке \ref{fig:tunnel_effectivness}.
 
 В работе \cite{palmer2009analysis} предложено силу формируемую разностью давлений представлять следующим образом:
 \begin{equation}
@@ -310,57 +219,10 @@
 \end{equation}
 \noindent где $T_T(v=0)$ -- упор создаваемый подруливающим движителем в отсутствии набегающего потока, $\rho$ -- плотность воды, $A=\pi R^2$, где $R$ -- радиус гребного винта подруливающего движителя.
 
-Дифферентующий момент формируемый упором подруливающего движителя и гидродинамической силой определяется следующим образом:
-\begin{equation*}
-	M = T_T x_T + (T_T-T_S)x_S
-\end{equation*}
-\noindent где $x_T$ -- расстояние между ЦМ подводного аппарата и точкой приложения силы $T_T$, а в свою очередь $x_S$ - это расстояние между ЦМ ПА и точкой приложения силы $T_S$, которая определяется следующим образом:
-\begin{equation*}
-	x_S = x_T - kD\frac{u}{u_j}
-\end{equation*}
-\noindent где $D$ -- диаметр туннеля подруливающего движителя, $k$ -- коэффициент, зависящий от конструктивных особенностей подруливающей шахты и формы АНПА.
-
 Кроме скорости набегающего потока на эффективность подруливающих двигателей оказывают влияние углы атаки и дрейфа ПА.
 В работе \cite{palmer2008modelling} представлена модель зависимости упора создаваемого горизонтальным подруливающим движителем от скорости набегающего потока и угла дрейфа.
 
 \section{Модель рулевых устройств ПА}
-В техническом отчете \cite{steenson2011control} подробно представлен расчет подъемной силы для АНПА ``Dolphin 2'', в котором ДРК состоит из четырех кормовых рулей нормального расположения и четырех подруливающих движителей (2-х вертикальных и 2-х горизонтальных).
-
-Подъемная сила формируемая горизонтальными рулевыми устройствами определяется следующим выражением:
-\begin{equation*}
-    F_{lift} = \frac{1}{2}\rho v^2 A_{SP} C_{LSP}
-\end{equation*}
-\noindent где
-\begin{itemize}
-    \item $\rho$ -- плотность воды;
-    \item $v$ -- скорость продольного движения АНПА;
-    \item $A_{SP}$ -- площадь РУ;
-    \item $C_{LSP}$ -- подъемный коэффициент РУ;
-\end{itemize}
-
-В свою очередь, подъемный коэффициент РУ $C_{LSP}$ быть рассчитан следующим образом:
-\begin{equation*}
-    C_{LSP} = a_{sp}\alpha \left( \frac{2 \pi}{1 + (2/AR)} \right)
-\end{equation*}
-\noindent где
-\begin{itemize}
-    \item $a_{sp}$ -- коэффициент подъемной силы (1/$^\circ$);
-    \item $\alpha$ -- угол поворота РУ относительно потока жидкости;
-    \item $AR$ -- соотношение сторон РУ;
-\end{itemize}
-
-Соотношение сторон РУ $AR$ определяется следующим образом:
-\begin{equation*}
-    AR = k \frac{S}{\bar{c}}
-\end{equation*}
-\noindent где $S$ -- площадь РУ, $\bar{c}$ -- среднее значение длины РУ (chord), а коэффициент $k$ определяет влияние щели между РУ и корпусом ПА. Если щель отсутствует, то $k=2$, При отношении ширины щели к длине РУ около $0.1$ коэффициент $k\approx1.5$
-
-Угол $\alpha$ определяет положение РУ относительно потока воды, в случае управления по глубине, можно эту переменную переписать следующим образом:
-\begin{equation*}
-    \alpha = \delta - \psi
-\end{equation*}
-\noindent где $\delta$ -- угол перекладки ГУ относительно продольной оси ССК, $\psi$ -- текущий дифферент АНПА.
-
 Традиционным конструктивным и эксплуатационным решением РУ является использование кормовых рулей и элеронов, хотя при малых скоростях движения находят применение и дополнительные рули глубины.
 Управляющие моменты рулей являются функцией угла перекладки и скорости набегающего потока, при этом дополнительные силы лобового сопротивления не всегда учитывается при анализе управления.
 Модель РУ определяется следующими соотношениями \cite{боженов1986}:
@@ -385,7 +247,7 @@
 В рамках исследования необходимо определить насколько меняется поведение ИМ ДРК при движении АНПА в набегающем потоке.
 Для численного анализа поведения маршевого движителя в набегающем потоке была разработана его блочная модель (рисунок \ref{fig:modelling-thruster}), где модель привода движителя описывается в соответствии с системой дифференциальных уравнений \ref{eq:motor_model}, а модель гребного винта - в соответствии с уравнениями \ref{eq:propeler_model}.
 Параметры моделирования представлены в таблице \ref{tab:modelling-thruster}.
-В рамках моделирования было реализовано управление электроприводом движителя по моменту в соответствии с выражением \ref{eq:thruster_control_torque}.
+В рамках моделирования было реализовано управление электроприводом движителя по моменту.
 Для расчёта кривых действий ГВ была использована прикладная программа PSOP \cite{инзарцев2018подводные}, которая рассчитывает параметры ГВ основываясь на данных регрессионной
 базы серийных испытаний гребных винтов Дайдола-Джонсона \cite{daidola1992propeller}.
 
@@ -423,19 +285,19 @@
     \end{tabular}
 \end{table}
 
-В рамках реализованной модели движителя был проведен анализ влияния соосного набегающего потока на упор создаваемый маршевым движителем при различных кодах управления (рисунок \ref{fig:modelling-thruster-velocity}), кроме того была явным образом рассчитана зависимость упора создаваемого движителем от скорости набегающего потока для фиксированных значений кода управления (рисунок \ref{fig:modelling-thruster-code}).
+В рамках реализованной модели движителя был проведен анализ влияния соосного набегающего потока на упор создаваемый маршевым для фиксированных значений кода управления (рисунок \ref{fig:modelling-thruster-code}).
 Видно, что создаваемый упор существенно зависит от набегающего потока и при скорости движения 2 м/с падает почти в 2 раза.
 
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=0.8\linewidth]{modelling/Моделирование - маршевый движитель код.png}
-    \caption{Численное моделирование упора создаваемого маршевым движителем при различных параметрах скорости набегающего потока.}
-    \label{fig:modelling-thruster-velocity}
-\end{figure}
+% \begin{figure}[ht]
+%     \centering
+%     \includegraphics[width=0.6\linewidth]{modelling/Моделирование - маршевый движитель код.png}
+%     \caption{Численное моделирование упора создаваемого маршевым движителем при различных параметрах скорости набегающего потока.}
+%     \label{fig:modelling-thruster-velocity}
+% \end{figure}
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=0.8\linewidth]{modelling/Моделирование - маршевый движитель скорость.png}
+    \includegraphics[width=0.6\linewidth]{modelling/Моделирование - маршевый движитель скорость.png}
     \caption{Численное моделирование установившегося  упора создаваемого маршевым движителем при различных параметрах кода управления.}
     \label{fig:modelling-thruster-code}
 \end{figure}
@@ -455,7 +317,7 @@
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=0.8\linewidth]{modelling/Моделирование - подруливающий движитель скорость.png}
+    \includegraphics[width=0.6\linewidth]{modelling/Моделирование - подруливающий движитель скорость.png}
     \caption{Численное моделирование установившегося эффективного упора создаваемого подруливающим движителем при различных скоростях набегающего потока.}
     \label{fig:modelling-tunnel-velocity}
 \end{figure}
@@ -466,7 +328,7 @@
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=0.8\linewidth]{modelling/Моделирование - рули скорость.png}
+    \includegraphics[width=0.6\linewidth]{modelling/Моделирование - рули скорость.png}
     \caption{Численное моделирование момента создаваемого рулем управления при различных скоростях набегающего потока.}
     \label{fig:modelling-rudder-velocity}
 \end{figure}
