--- a/Dissertation/partStatement.tex
+++ b/Dissertation/partStatement.tex
@@ -151,129 +151,6 @@
 Функционал $J$ может быть записан также и в $L_1$ метрике, но особенностью методов линейного программирования при решении таких задач является поиск оптимального решения по граням и вершинам области допустимых значений границ подмножества $\mathspace{U}$. 
 Физический смысл этого заключается в тенденции максимальной загрузки минимального количества ИМ \cite{bodson2002evaluation}, что существенно уменьшает КПД электропривода, повышает износ отдельных ИМ и ведёт к чрезмерной нагрузке на систему энергообеспечения. В то время как методы квадратичного программирования, в свою очередь, стремятся найти такое решение, которое распределяет равную нагрузку на максимальное количество элементов управления.
 
-\subsubsection{Динамическое распределение}
-Предыдущие формулировки задачи распределения вектора управления строились на базе статической модели ИМ и не учитывали динамических процессов, которые происходят в них.
-В работах \cite{10.2514/1.11607, 10.1016/j.automatica.2008.03.031} были предложены первые попытки формулировки задачи распределения вектора управления с учетом динамики ИМ.
-
-В работе \cite{10.1016/j.automatica.2009.01.013} представлен новый подход для учета динамики исполнительных приводов. Его суть заключается в создании подпространств глобального пространства решения задачи управления ДРК, которые отражают «виртуальную» динамику процессов, происходящих в исполнительных механизмах. Позже этот подход был развит в работах \cite{10.1016/j.automatica.2014.10.112, 10.1109/cdc.2012.6426209}.
-
-В рамках нового подхода, динамическая задача управления ДРК (dynamic control allocation) приобрела новую формальную запись:
-
-\begin{equation*}
-    \left\{
-    \begin{matrix*}[l]
-    \dot{\vect{\omega}}(t) = \vect{\mu}(t) \\
-    \vect{u}(t) = B^+\vect{\nu}(t) + B_{\perp} \dot{\vect{\omega}}(t), \vect{u}_c(t) \equiv B^+\vect{\nu}(t)
-    \end{matrix*}
-    \right.
-\end{equation*}
-\noindent где
-\begin{itemize}
-    \item $\vect{\omega}(t) \in \mathspace{R}^{k-m}$ -- вектор состояния распределителя (allocator state);
-    \item $\vect{\mu}(t)$ -- вход распределителя (allocator input);
-    \item $\vect{u}_c(t)$ -- первичный вектор управления ИМ;
-    \item $B^+$ -- псевдообратная матрица к матрице $B$;
-    \item $B_{\perp}$ --  представляет собой такую недоопределённую матрицу множество решений которой формируют подпространство ортогональное подпространству сформированному множеством решений недоопределённой матрицы $B$.
-\end{itemize}
-
-Такая запись позволяет получить произвольный вектор команд управления ИМ путем настройки $\vect{\omega}(t)$.
-
-Недостатком методов, представленных выше, является необходимость знания модели исполнительных механизмов. Для решения этой проблемы в работе \cite{10.1016/j.automatica.2020.109265} авторами представлен новый подход, в котором параметры динамики ИМ определяются в режиме реального времени на основе методов обучения с подкреплением.
-
-\subsubsection{Динамическое управление ДРК на базе прогнозирующих моделей}
-Управление с прогнозирующими моделями (Model predictive control) представляет собой один из самых современных подходов в области теории управления. 
-Изначально он применялся при управлении производственными процессами, где большие постоянные времени переходных процессов позволяли его применять, т.к. он крайне ресурсоёмок.
-Но с ростом вычислительных мощностей компьютеров и встраиваемых систем появилась возможность применения данного подхода для мобильных объектов управления. В рамках этого подхода сформировался отдельный подкласс под названием «Model predictive control allocation» \cite{10.1016/j.ifacol.2019.08.065, 10.1016/j.ifacol.2015.10.048, 10.1007/s11768-019-7231-9} предназначенный для решения задачи управления ДРК на основе прогнозирующих моделей.
-
-Задача управления ДРК в данном подходе записывается следующим образом \cite{10.1109/icca.2011.6137940}. Пусть исполнительные механизмы ДРК представлены в формулировках метода пространства состояний следующим образом:
-
-\begin{equation*}
-    \dot{\vect{u}}(t) = A_u\vect{u}(t) + B_u \vect{u}_{cmd}(t)
-\end{equation*}
-\noindent где
-\begin{itemize}
-    \item $A$ и $B$ -- блочно-диагональные матрицы описывающие динамику исполнительных элементов;
-    \item $\vect{u}_{cmd}(t)$ -- вектор управления ИМ;
-    \item $\dot{\vect{u}}(t)$ -- управление сформированное ИМ.
-\end{itemize}
-
-Тогда постановка задачи управления ДРК на базе прогнозирующей модели будет выглядеть следующим образом:
-
-\begin{equation*}
-\begin{matrix*}[c]
-    \dot{\vect{u}}(t) = A_u\vect{u}(t) + B_u\vect{u}_{cmd}(t) \\
-    \text{при условии} \\
-    \vect{\nu}_c(t) = B \vect{u}(t), \vect{u} \in \mathspace{U}
-\end{matrix*}
-\end{equation*}
-
-Для предсказания состояния на горизонт времени $N$ набора исполнительных механизмов $\vect{u}(t)$ используется дискретная запись:
-\begin{equation*}
-    \begin{matrix*}[c]
-    \widehat{\vect{u}} = \left[ \widehat{\vect{u}}(k+1|k), \dots, \widehat{\vect{u}}(k+N|k)) \right] \\
-    \end{matrix*}
-\end{equation*}
-\noindent где $N$ представляет собой размер горизонта предсказания, а $k$ текущий временной отрезок.
-Для заданного горизонта предсказания множество решений вектора управления ИМ ДРК $u_{cmd}^*$ может быть найдено путем минимизации квадратичного функционала, который записан следующим образом:
-\begin{eqnarray*}
-    J(\cdot) = \sum_{j=1}^N W(j) \left[ \widehat{\vect{\nu}}(k+j|k) - \vect{\nu^{*}}(k+j) \right]^2 + \notag \\ 
-    + \sum_{j=1}^{N-1} \sum_{i=1}^{k}W_a(i)\left[ \vect{u}_{cmd,i}(k+j-1|k) \right]^2
-\end{eqnarray*}
-\noindent где $W{j}$ представляет собой матрицу весовых коэффициентов которая отражает значимость минимизации невязки с целевой командой управления $\vect{\nu}^*$ в момент времени $j$. В свою очередь весовой коэффициент $W_a(i)$ отражает стоимость использования $i$-го исполнительного механизма.
-
-\subsection{Нелинейные системы исполнительных механизмов ДРК}
-
-Существуют более сложные системы ДРК, так например в экспериментальном автономном подводном аппарате «KAUV-1» \cite{10.1007/s12555-012-0385-6} маршевый движитель расположен на поворотной платформе, которая обеспечивает его вращение в горизонтальной плоскости ССК, в то время как система изменяемого положения центра масс обеспечивает создание момента по каналу дифферента.
-Еще одним примером сложного движительно-рулевого комплекса является автономный подводный аппарат «Jinbei» \cite{10.1109/oceans-yeosu.2012.6263496} на котором установлена пара вращательных подруливающих движителей.
-Похожий автономный робототехнический комплекс под названием «Otohime» \cite{10.1109/oceans-yeosu.2012.6263498} так же оснащен поворотными подруливающими движителями и был разработан той же группой японских ученых для решения задачи автоматического сбора грунта с морского дна.
-
-Особенностью таких структур ДРК является наличие движителей, которые закреплены на поворотной платформе.
-Это ведёт к тому что допущение $\vect{\nu}(t)=B\vect{u}(t)$ не может быть принято.
-Кроме того, в этом случае область решения является невыпуклой. 
-Для такого класса задачи подавляющая часть методов описанные выше не работают и требуются другие подходы.
-\subsubsection{Методы нелинейного программирования}
-В работах \cite{10.1109/tcst.2003.821952, poonamallee2004nonlinear} показано, что методы нелинейного программирования можно использовать для решения задачи управления ДРК.
-Основным используемым подходом является локальная аппроксимация квадратичного функционала и линеаризация ограничений. 
-
-Это приводит к численному методу решения оптимизационной задачи, аналогичному последовательному квадратичному программированию (Sequential quadratic programming), за исключением того, что линейное либо квадратичное приближение необходимо выполнять для каждой итерации расчётов.
-
-Недостатком такого подхода является то, что при высокой нелинейности исполнительных механизмов и сильной невыпуклости области решения данный метод может остаться в локальном экстремуме, не дойдя до глобального, что может существенно ухудшить качество управления.
-
-\subsubsection{Динамический поиск оптимума}
-В работе \cite{10.1109/cdc.2004.1429240} автором предлагается переформулировать задачу поиска оптимального управления ДРК как поиск управляющей функции Ляпунова. В частности, пусть задан функционал $J'(\vect{x}, \vect{u}, t) = J(\vect{x}, \vect{u}, t) + \delta(\vect{u})$, где $\delta(\vect{u})$ представляет собой специальную штрафную функцию которая удерживает $\vect{u}$ в рамках подпространства $\mathspace{U}$. Тогда функция Ляпунова будет записана следующим образом:
-\begin{equation*}
-    L(\vect{x}, \vect{u}, t, \lambda) = J'(\vect{x}, \vect{u}, t) + \lambda^T(\nu_c - h(\vect{u},\vect{x},t))
-\end{equation*}
-\noindent где $\lambda$ -- множитель Лагранжа.
-
-Пусть существует функция управления Ляпунова $V_0(\vect{x},t)$ (Control-Lyapunov function) которая была сформирована системой управления НПА, тогда задача оптимального управления ДРК при этом подходе будет записана следующим образом:
-\begin{equation*}
-    V(\vect{x}, \vect{u}, t, \lambda) = \sigma V_0(\vect{x}, t) + \frac{1}{2}
-    \left(
-    \frac{\partial L^T}{\partial \vect{u}} \frac{\partial L}{\partial \vect{u}} 
-    + \frac{\partial L^T}{\partial \lambda} \frac{\partial L}{\partial \lambda}
-    \right)
-\end{equation*}
-\noindent где $\sigma$ -- некоторый множитель.
-
-Этот подход был развит позже для задачи управления ДРК для нелинейных ИМ с учетом их динамики \cite{10.4173/mic.2008.2.4}.
-\section{Программные средства для решения задачи управления ДРК}
-Для решения задачи оптимизации управления ДРК во встраиваемых системах управления, используемых в подводных аппаратах желательно использовать легковесные библиотеки на языках программирования С++/С, которые позволяют решать оптимизационные задачи в режиме реального времени и легко встраиваемы в ПО аппарата.
-
-Основные известные программные реализации с открытым исходным кодом которые подходят для описываемой задачи следующие:
-\begin{itemize}
-    \item CVXGEN -- реализация решения задачи квадратичной оптимизации на основе метода внутренней точки с автоматической генерацией С кода \cite{mattingley2010real}. В работе \cite{10.1109/icca.2011.6137940} показано что этот программный пакет может быть использован для решения задачи оптимального управления ДРК в формулировках управления с прогнозирующими моделями в режиме реального времени.
-    \item qpOASES -- реализация решения задачи квадратичной оптимизации на основе метода активных множеств на языке С++ \cite{ferreau2014qpoases}.
-    \item FiOrdOs -- специальный программный модуль к MATLAB, который позволяет автоматически сформировать код для численного решения задачи квадратичной оптимизации с линейными ограничениями на языке С. Может быть использован для решения задачи оптимального управления ДРК в формулировках управления с прогнозирующими моделями \cite{jones2012fast}.
-    \item ACADO -- специальная программная среда и набор алгоритмов для решения задачи квадратичной оптимизации с ограничениями, динамической оптимизации, задачи MPC. В составе пакета есть специальные методы для автоматической генерации С кода \cite{houska2011acado}.
-    \item MPT (Multi-Parametric Toolbox) -- специальный бесплатный пакет к MATLAB включающий в себя реализацию оптимального управления линейными, гибридными и нелинейными системами. Может быть задан линейный и квадратичный функционал качества. Есть автоматическая генерация кода на языке С \cite{kvasnica2004multi}.
-\end{itemize}
-
-% \section{Особенности отказоустойчивых методов управления ДРК}\label{sec:Propulsion/FaultToulerant}
-% \begin{noteplan}
-%     Тут будет потом про обзор про отказоустойчивость на уровне управления ДРК. Таких статей достаточно много.
-% \end{noteplan}
-
 \section{Постановка цели и задач исследования}\label{sec:Statement/SetProblems}
 
 Задачу управления движением подводного аппарата можно ставить различными способами.
@@ -292,12 +169,10 @@
 
 Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
-  \item изучить математические модели исполнительных механизмов (маршевые движители, подруливающие движители, рули управления) ДРК подводного аппарата учитывающие особенности их работы в набегающем потоке;
-  \item разработать метод формального описания, анализа и реконфигурации в режиме реального времени ДРК, оснащенного произвольным набором исполнительных механизмов;
-  \item разработать и реализовать метод определения скорости набегающего потока по параметрам работы электроприводов маршевых движителей;
-  \item разработать и реализовать энергетически оптимальный отказоустойчивый метод управления ДРК для АНПА устойчивый к неполному знанию скорости набегающего потока;
-  \item разработать и реализовать метод плавного управления ДРК при переходах между различными типами движения;
-  \item провести проверку эффективности разработанного метода управления ДРК на базе модельных экспериментов.
+  \item Изучить модели описания исполнительных механизмов (маршевые движители, подруливающие движители, рули управления) ДРК подводного аппарата учитывающие особенности их работы в набегающем потоке;
+  \item Разработать и реализовать метод оценки скорости движения ПА относительно набегающего потока по параметрам работы электроприводов маршевых движителей;
+  \item Разработать и реализовать энергетически оптимальный метод управления ДРК для АНПА адаптивный к различным типам движения ПА;
+  \item Провести проверку эффективности разработанного метода управления ДРК на базе модельных экспериментов.
 \end{enumerate}
 
 \section{Выводы по главе 1}\label{sec:Statement/Conclusion}
